# Refernce_Line_Optimization

./: CMakeLists.txt  package.xml  readme.md
include/: base.h  help.h  map_base.h  map_vis.h  ref_line_opt.h  ref_opti.h  vec_map.h
launch/: refline_optimization.launch
map_data/: junction.osm  junction1.osm  junction2.osm  ref.rviz
ref_line_generation/: CMakeLists.txt
ref_line_generation/include/: type_cast.h
ref_line_generation/map_data/: ref.rviz
ref_line_generation/src/: main.cpp  map_vis.cpp  ref_line_opt.cpp  solve_nlp.cpp  type_cast.cpp
src/: help.cpp  map_io.cpp  map_vis.cpp  ref_line_opt.cpp
