<?xml version="1.0"?>
<package format="2">
  <name>ref_line_generation</name>
  <version>0.1.0</version>
  <description>To optimize reference line</description>

  <maintainer email="risonwill@gmail.com">WangRunsheng</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geographic_msgs</build_depend>
  <build_depend>geodesy</build_depend>


  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <build_export_depend>geographic_msgs</build_export_depend>
  <build_export_depend>geodesy</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>  
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>geographic_msgs</exec_depend>
  <exec_depend>geodesy</exec_depend>


</package>
